feat: Further tuning of local planner params

--- a/my_robot/config/base_local_planner_params.yaml
+++ b/my_robot/config/base_local_planner_params.yaml
@@ -16,8 +16,8 @@ TrajectoryPlannerROS:
   vx_samples: 5.0
   vtheta_samples: 10.0
 
-  pdist_scale: 2.0 #0.6
+  pdist_scale: 2.5 #0.6
   gdist_scale: 0.6 #0.8
-  occdist_scale: 0.3
+  occdist_scale: 0.35
 
-  holonomic_robot: false
+  holonomic_robot: true
